# Ingenieria-Informatica-ADE

./: README.md
1 curso/1 semestre/ADE/FDAE/: Documento.docx  FDAE.docx
1 curso/1 semestre/Calculo/Maxima/: Examen romberg.wxmx  Examen_borroso.wxmx  Martinez-Diaz-David-2.wxmx  MartinezDiaz-David-Grupo_2.wxmx  ejercicios.wxmx  ejercicios_examen.wxmx  graficas_avanzadas.wxmx  maxima_5.wxmx  sin título.wxmx
1 curso/1 semestre/Fundamentos Fisicos y Tecnologicos/: Fisica_parte_2.docx
1 curso/1 semestre/Fundamentos Fisicos y Tecnologicos/Practicas/: Fisica_parte_2.docx  Practica4.xlsx
1 curso/1 semestre/Fundamentos de Programacion/Basurilla/: Ejercicio_Interes(27).cpp  esad.cpp
1 curso/1 semestre/Fundamentos de Programacion/Examenes/: AlumnosNotas.cpp  ExamenADN.cpp  ExamenDistanciaPuntos.cpp  ExamenMatrizMostrarOrdenadoFilas.cpp  Examen_Interpolacion.cpp  Matriz_Ordenar.cpp  NotasMinimo.cpp  OrdenarVecindario.cpp  Untitled8.cpp  prueba.cpp
1 curso/1 semestre/TOC/LogicWork/: ALU4bits.cct  EtapaALU.bak  EtapaCircuitoLógico.bak  MiLib.clf  Multiplexor4a1.bak  Multiplexor4a1.cct  Sumador-1Bit_clase.cct
1 curso/2 semestre/H.Economia/: 2o_parcial_ING-GADE.doc  Ejemplo_examen_2a_convocatoria._Keynesianismo_y_COVID_19.doc
1 curso/2 semestre/Metodologia de la Programacion/: examenFinal.cpp
1 curso/2 semestre/Metodologia de la Programacion/Examenes/: examenFinal.cpp
1 curso/2 semestre/Microeconomia/: CAPÍTULO 8.docx  Capítulo 1 El  consumidor (1).pptx  Capítulo 2 (1).pptx  Capítulo 3.pptx  Capítulo 4.pptx  ~$PÍTULO 8.docx
1 curso/2 semestre/Microeconomia/Ejercicios/: Ejercicios 5.docx  Ejercicios 6 y 7.docx  Ejercicios temas 1 y 2 (2).docx  Ejercicios temas 3 y 4.docx
1 curso/2 semestre/Microeconomia/Practicas/: MapaConceptual-CompetenciaPerfecta.docx
1 curso/2 semestre/Microeconomia/Titulares/: Titulares David.docx  Titulares-CompetenciaPerfecta.docx  Titulares-EquilibrioGeneral-Eficencia.docx  Titulares-Monopolio.docx  Titulares_Oligopolio.docx
2 curso/1 cuatrimestre/Estructura de Datos/Examenes/: examenesdg1820.tgz
2 curso/1 cuatrimestre/FFT/: 35ca72fa-5947-4034-9533-f2ec3d945a9d.jfif  419810b8-367a-4cbf-b4f7-61de9c97ad7b.jfif
2 curso/1 cuatrimestre/FFT/Fisica/: Solve Elec.lnk
2 curso/1 cuatrimestre/IOF/IOF/: POLIZA DE CREDITO (actualizado).xlsx  T4 - Leyes Compuestas.xlsx
2 curso/1 cuatrimestre/Macroeconomia/Ejercicios/: Ejercicio.docx  Ejercicio2.docx  Ejercicio3.docx  Ejercicio4.docx  Excel-1.xlsx  MartinezDiazDavid-Datos.xlsx  MartinezDiazDavid-conozco.docx  MartinezDiazDavid-logica.xlsx  exce1PROTEGIDO.xlsx
2 curso/1 cuatrimestre/Macroeconomia/Teoria/: Nuevo Documento de Microsoft Word.docx
2 curso/1 cuatrimestre/Marketing/Practicas/: Estrategias Competitivas.docx  Estrategias_Competitivas.docx  Marketing.pptx  PRÁCTICA_Personalidad.docx  Piramide_Maslow.docx  Practica.docx
2 curso/1 cuatrimestre/Sistemas Operativos/Ejercicios/: CuestionesRepasoTema2.docx  EjerciciosRepaso.docx
2 curso/1 cuatrimestre/Sistemas Operativos/ExamenSO/: ejercicio1.c  ejercicio2.c
2 curso/1 cuatrimestre/Sistemas Operativos/SO/: Nuevo Documento de Microsoft Word.docx
2 curso/1 cuatrimestre/Tecnicas Cuantitativas/: PreguntasTC.docx
2 curso/1 cuatrimestre/Tecnicas Cuantitativas/Ejercicios/: Act-Tema1.docx
3 curso/1 cuatrimestre/Econometria/Mis ejercicios/: Ejercicios-A.ipynb  Ejercicios-Adelantado.ipynb  Ejercicios-B.ipynb
3 curso/1 cuatrimestre/Econometria/Python/: covid_africa.xlsx  practica_covid_africa.ipynb
3 curso/1 cuatrimestre/Econometria/econometria-master/: 00_ECO_Intro.ipynb  01_ECO_Estimacion.ipynb  02_ECO_Inferencia.ipynb  03_ECO_HeteroscedasticidadAutorCorrelacion.ipynb  04_ECO_Multicolinealidad.ipynb  CobbDouglas.xlsx  EleccionDiscreta.ipynb  LinealidadyNormalidad.ipynb  README.md  Theil.csv
3 curso/1 cuatrimestre/Econometria/examen/: ExamenAdelantado_Diciembre2021_Tipo1.ipynb  peliculas.xlsx
3 curso/1 cuatrimestre/FR/: fr-seminario.docx
3 curso/1 cuatrimestre/PDOO/Practicas/: hola.txt
3 curso/1 cuatrimestre/SCD/examen_scd/: cuestion1.cpp  ejercicio1.cpp  ejercicio2.cpp
3 curso/2 cuatrimestre/FBD/Practicas/: Examen.sql  InsercionCapitulo2.sql  Insercion_liga_baloncesto.sql  LigaBaloncesto.sql  capitulo2.sql
3 curso/2 cuatrimestre/FIS/Ejercicios/: Ejercicio-Entregar.docx
3 curso/2 cuatrimestre/IA/practica1/: Memoria_IA_Practica1.docx  jugador.cpp  jugador.hpp
3 curso/2 cuatrimestre/IA/practica2/: jugador.cpp  jugador.hpp  memoria2.docx
3 curso/2 cuatrimestre/IA/practica3/: AIPlayer.cpp  AIPlayer.h  practica3.docx
3 curso/2 cuatrimestre/MC/: Nuevo Hoja de cálculo de Microsoft Excel.xlsx
3 curso/2 cuatrimestre/MC/ejercicio/: ejercicio.vpg
4-curso/1 cuatrimestre/Contabilidad de Gestion/Ejercicios/: Ejercicios.xlsx  Enunciados Casos prácticos Tema 2.xlsx
4-curso/1 cuatrimestre/Direccion de Operaciones/: Caso Practico.docx
4-curso/1 cuatrimestre/Direccion de Operaciones/Tema 5/: EJEMPLOS-distancias-rectangulares-euclideas-estudiantes.xlsx  EJEMPLOS-factores-ponderados-estudiantes.xlsx
4-curso/1 cuatrimestre/Diseño de Sistemas de Informacion/: proyecto.vpp
4-curso/1 cuatrimestre/Diseño de Sistemas de Informacion/Practica 2/: practica2.docx
4-curso/1 cuatrimestre/Diseño de Sistemas de Informacion/Practica 3/: practica_ddsi.sql
4-curso/1 cuatrimestre/Economia Mundial/: Nuevo Documento de Microsoft Word.docx  money_model.py
4-curso/1 cuatrimestre/Informatica Grafica/Practicas/builds/linux/: CMakeLists.txt  pracs-ig.code-workspace
4-curso/1 cuatrimestre/Informatica Grafica/Practicas/builds/macos/: CMakeLists.txt  pracs-ig.code-workspace
4-curso/2 cuatrimestre/EE/: apuntes.md
4-curso/2 cuatrimestre/EE/Examnees/: test.docx  (+1 more)
5-curso/2 cuatrimestre/TFG - ADE/: TFG - David Martinez Diaz.docx
(+1109 files in other folders)
